--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
           year yet!</p>
         <p class="love-declaration">I love you endlessly. Let’s make 2025 our best year yet! 💫</p>
       </div>
-      <img class="header-image" src="Happy new year pic.jpg" alt="Happy New Year" />
+      <img class="header-image" src="Happy 1.jpg" alt="Happy New Year" />
     </header>
 
     <!-- Error Message (Only for 2024 selection) -->
     <div id="error-message" style="display:none; text-align:center; color:red;">
-      <h2>⚠️ Oops, Baby! ⚠️</h2>
-      <p>Please select the correct year to view the New Year message and celebrate!</p>
+      <h2>⚠️ Oops,Baby! ⚠️</h2>
+      <p>Please select the correct year to view the Flashback of 2024 and more fun!</p>
     </div>
 
     <!-- Long Distance Flashcard for 2024 -->
@@ -49,7 +49,7 @@
         moments are still close to my heart.</p>
 
       <div class="card">
-        <img src="first-message.jpg" alt="First Message" class="card-image">
+        <img src="1st msg.jpg" alt="First Message" class="card-image">
         <div class="card-text">
           <h3>Our First Message 💬</h3>
           <p>It all started with a simple message, but it quickly became so much more. From that moment, I knew you were
@@ -58,7 +58,7 @@
       </div>
 
       <div class="card">
-        <img src="video-call.jpg" alt="Video Call" class="card-image">
+        <img src="1st call.jpg" alt="Video Call" class="card-image">
         <div class="card-text">
           <h3>First Video Call 📹</h3>
           <p>Even though we couldn't be in the same place, seeing your face for the first time made the distance feel a
