--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       </div>
 
       <div class="card">
-        <img src="late-night-chats.jpg" alt="Late-Night Chats" class="card-image">
+        <img src="Lnc pic.jpg" alt="Late-Night Chats" class="card-image">
         <div class="card-text">
           <h3>Late-Night Chats 🌙</h3>
           <p>Our late-night conversations that lasted for hours. We would talk about everything, and nothing ever felt
